<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">exercise2</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="married">Married</string>
    <string name="male">male</string>
    <string name="female">female</string>
    <string name="gender">Gender</string>
    <string name="save">SAVE</string>
    <string name="load">LOAD</string>
    <string name="date">Date Birth</string>
    <string name="error_blank_fields">Sorry but you need to complete fields Name and  Last Name</string>

</resources>
